# code-usage

./: .gitignore  README.md  design.md  skills-lock.json
bintest/: Cargo.toml
bintest/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/providers/: antigravity.rgba  claude.rgba  codex.rgba  copilot.rgba  cursor.rgba  devin.rgba  opencode.rgba  openrouter.rgba  openusage.rgba  zai.rgba
src-tauri/src/: bin_test.rs  main.rs  model.rs  providers.rs  scanner.rs
ui/: app.js  details.css  index.html  local.css  pet.css  pet.html  pet.js  styles.css
